# Trabalho_prog_imperativa

./: .gitignore  CMakeLists.txt  README.md  main.c  organização de código.txt
src/: back.c  back.h  front.c  front.h  main.c
src/data/: pacientes.csv  usuarios.csv
src/data/comentarios/: 00334986109.txt  12345678912.txt  4567890.txt  71386135470.txt
src/gui/callbacks/: eventos_de_janelas.c  eventos_de_janelas.h
src/gui/telas/: cadastro_doutor.c  cadastro_paciente.c  front.c  front.h  home_logado.c  login.c  perfil_paciente.c  pesquisa_pacientes.c
src/persistence/: persistence.c  persistence.h
src/services/: back.c  back.h
